# pyproject-deps

./: CHANGELOG.md  LICENSE  README.md  TODO.md  jest-config.js  package-lock.json  package.json
sample/: pyproject.toml
src/: extension.ts
src/api/: pypi.ts
src/core/: fetcher.ts  interfaces.ts  listener.ts
src/providers/: autoCompletion.ts  quickFill.ts
src/semver/: semverUtils.ts
src/toml/: commands.ts  parser.ts
src/ui/: decoration.ts  decorator.ts  indicators.ts  preferences.ts
test/: runTest.ts  setup.ts
test/extension/: validation.test.ts
