[project]
name = "spam"
version = "2020.0.0"
description = "Lovely Spam! Wonderful Spam!"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
authors = [
  {email = "hi@pradyunsg.me"},
  {name = "Tzu-ping Chung"}
]
maintainers = [
  {name = "Brett Cannon", email = "brett@python.org"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
  "httpx",
  "asyncclick=^8.1.3.4",
  "gidgethub[httpx]>4.0.0",
  "django>2.1; os_name != 'nt'",
  "django>2.0; os_name == 'nt'",
  'requests [security,tests] >= 2.8.1, == 2.8.* ; python_version < "2.7"'
]

[project.optional-dependencies]
test = [
  "pytest < 5.0.0",
  "pytest-cov[all]"
]

[tool.poetry]
name = "spam"
version = "1.0.0"
description = "Sample application"
authors = ["Erik Aker <eraker@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
asyncclick = "^8.1.3.4"
azure-eventhub = "5.11.2"
calver = "2022.6.26"
hiredis = "^2.1.1"
httpx = "0.24.1"
orjson = "^3.8.3"
mysqlclient = { version = "^1.3", optional = true }
psycopg2 = { version = "^2.7", optional = true }
pydantic = "^1.10.4"
python-dateutil = "^2.8.2"
python-json-logger = "2.0.7"
redis = {version = "^4.4.2", extras = ["hiredis"] }
starlette = "^0.25.0"
structlog = "^23.1.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
opentelemetry-api = "^1.16.0"
opentelemetry-sdk = "^1.16.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.16.0"
opentelemetry-instrumentation-httpx = "^0.37b0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-mypy = "^0.10.3"
pytest-pycodestyle = "^2.3.1"

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "^1.0.1"
black = "^22.12.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pycodestyle]
ignore = "E203,W503,F541"
max-line-length = 110
